--- a/webclone/package.json
+++ b/webclone/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "vue": "^3.0.0"
   },
   "devDependencies": {
